# soci

src/: CMakeLists.txt
src/backends/postgresql/: common.cpp  common.h  soci-postgresql.h  standard-into-type.cpp  standard-use-type.cpp  statement.cpp  vector-into-type.cpp  vector-use-type.cpp
src/core/: CMakeLists.txt  binary-exchange.h  binary.h  boost-geometry.h  endian_value.hpp  exchange-traits.h  into-type.h  soci-backend.h  soci.h  statement.cpp
src/core/test/: common-tests.h
src/examples/: CMakeLists.txt  example1.cpp
